--- a/webgl/dungeons/index.html
+++ b/webgl/dungeons/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Flying through gungeons</title>
 	<script src="../lib/three.min.js"></script>
+  <script src="../lib/Detector.js"></script>
 	<script src="../lib/tube.js"></script>
   <script src="../lib/OBJLoader.js"></script>
 	<link rel="stylesheet" href="../css/style.css">
