--- a/webgl/dungeons/index.html
+++ b/webgl/dungeons/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Flying through gungeons</title>
+	<title>Flying through dungeons</title>
 	<script src="../lib/three.min.js"></script>
   <script src="../lib/Detector.js"></script>
 	<script src="../lib/tube.js"></script>
