--- a/webgl/skull/index.html
+++ b/webgl/skull/index.html
@@ -130,8 +130,8 @@
 </head>
 <body>
 	<p style="position: absolute; width: 100%; text-align: center; line-height: 1.5; color:#fff;">
-		Interact - Right mouse and Wheel<br>
-		Painting - Left mouse
+		Interact - Mouse Right button and Wheel<br>
+		Painting - Mouse Left button
 	</p>
 	<p id="loading">
 		Loading...
