--- a/webgl/energy/index.html
+++ b/webgl/energy/index.html
@@ -19,21 +19,19 @@
         precision highp float;
         precision highp int;
 
-        attribute float pSize;
-        attribute float pOpacity;
-
-        uniform float size;
-        uniform float scale;
+        attribute float size;
+        attribute float opacity;
+        attribute vec3 aColor;
 
         varying vec3 vColor;
         varying float vOpacity;
 
         void main() {
-            vColor = color;
-            vOpacity = pOpacity;
+            vColor = aColor;
+            vOpacity = opacity;
 
             vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 );
-            gl_PointSize = 2.0 * pSize * size * scale / length( mvPosition.xyz );
+            gl_PointSize = 1000.0 * size / length( mvPosition.xyz );
             gl_Position = projectionMatrix * mvPosition;
         }
     </script>
@@ -42,8 +40,7 @@
         precision highp float;
         precision highp int;
 
-        uniform vec3 psColor;
-        uniform float opacity;
+        //uniform float opacity;
 
         varying vec3 vColor;
         varying float vOpacity;
@@ -51,9 +48,9 @@
         uniform sampler2D map;
 
         void main() {
-            gl_FragColor = vec4( psColor, vOpacity );
+            gl_FragColor = vec4( vColor, vOpacity );
             gl_FragColor = gl_FragColor * texture2D( map, gl_PointCoord );
-            gl_FragColor = gl_FragColor * vec4( vColor, 1.0 );
+            gl_FragColor *= vec4( vColor, 1.0 );
         }
     </script>
 </head>
