--- a/webgl/globe/index.html
+++ b/webgl/globe/index.html
@@ -4,7 +4,14 @@
 	<meta charset="UTF-8">
 	<title>Globe</title>
 	<style>
+        * {
+            margin: 0;
+            padding: 0;
+            line-height: 0;
+            background-repeat: no-repeat;
+        }
 		body {
+            font-family: sans-serif;
 			background-color: #000;
             overflow: hidden;
 		}
@@ -18,6 +25,7 @@
 			color: #ffffff;
 			opacity: 1.0;
 			animation: fadeOut 3s linear infinite;
+			z-index: 1000;
         }
         @keyframes fadeOut {
             0% { opacity: 1.0; }
