--- a/webgl/signs/index.html
+++ b/webgl/signs/index.html
@@ -12,7 +12,7 @@
         }
 		body {
             font-family: sans-serif;
-			background-color: #000;
+			background-color: #fff;
             overflow: hidden;
 		}
 		#loading {
