--- a/webgl/signs/index.html
+++ b/webgl/signs/index.html
@@ -17,12 +17,12 @@
 		}
 		#loading {
 			position: absolute;
-			top:50%;
+			top: 50%;
 			width: 100%;
 			font-size: 2rem;
 			font-weight: normal;
 			text-align: center;
-			color: #ffffff;
+			color: #777;
 			opacity: 1.0;
 			animation: fadeOut 3s linear infinite;
 			z-index: 1000;
@@ -64,8 +64,8 @@
 	</script>
 </head>
 <body>
-	<!--p id="loading">Loading...</p-->
-	<div id="container3D"><p style="text-align: center; margin-top: 20px; color: #fff">click to hide</p></div>
+	<p id="loading">Loading...</p>
+	<div id="container3D"></div>
 	<script src="./dist/app.js"></script>
 </body>
 </html>
