--- a/webgl/signs/index.html
+++ b/webgl/signs/index.html
@@ -30,7 +30,7 @@
 		}
 		.stuff__content {
 			box-sizing: border-box;
-			padding-top: 10vh;
+			padding-top: 3vh;
             height: 100vh;
 			font-size: 1.3rem;
 			text-align: center;
@@ -87,12 +87,13 @@
 	<!--p id="loading">Loading...</p-->
 	<div id="container3D"></div>
 	<div class="stuff">
-		<div id="page1" class="stuff__content"><h1>Lorem ipsum<br><span class="red">dolor sit amet</span><br>adipisicing</h1><p>Consequatur iste saepe voluptate! Assumenda<br>atque consequatur, dolores dolorum<br>earum expedita explicabo</p></div>
-		<div id="page2" class="stuff__content"><h1>Lorem ipsum<br><span class="red">dolor sit amet</span><br>adipisicing</h1><p>Consequatur iste saepe voluptate! Assumenda<br>atque consequatur, dolores dolorum<br>earum expedita explicabo</p></div>
-		<div id="page3" class="stuff__content"><h1>Lorem ipsum<br><span class="red">dolor sit amet</span><br>adipisicing</h1><p>Consequatur iste saepe voluptate! Assumenda<br>atque consequatur, dolores dolorum<br>earum expedita explicabo</p></div>
-		<div id="page4" class="stuff__content"><h1>Lorem ipsum<br><span class="red">dolor sit amet</span><br>adipisicing</h1><p>Consequatur iste saepe voluptate! Assumenda<br>atque consequatur, dolores dolorum<br>earum expedita explicabo</p></div>
-		<div id="page5" class="stuff__content"><h1>Lorem ipsum<br><span class="red">dolor sit amet</span><br>adipisicing</h1><p>Consequatur iste saepe voluptate! Assumenda<br>atque consequatur, dolores dolorum<br>earum expedita explicabo</p></div>
+		<div id="page1" class="stuff__content"><h1><span class="red">Peace</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
+		<div id="page2" class="stuff__content"><h1><span class="red">Megapolis</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
+		<div id="page3" class="stuff__content"><h1><span class="red">Space</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
+		<div id="page4" class="stuff__content"><h1><span class="red">Energy</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
+		<div id="page5" class="stuff__content"><h1><span class="red">Security</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
 	</div>
+
 	<script src="./dist/app.js"></script>
 </body>
 </html>
