--- a/webgl/signs/index.html
+++ b/webgl/signs/index.html
@@ -89,9 +89,10 @@
 	<div class="stuff">
 		<div id="page1" class="stuff__content"><h1><span class="red">Peace</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
 		<div id="page2" class="stuff__content"><h1><span class="red">Megapolis</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
-		<div id="page3" class="stuff__content"><h1><span class="red">Space</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
-		<div id="page4" class="stuff__content"><h1><span class="red">Energy</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
-		<div id="page5" class="stuff__content"><h1><span class="red">Security</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
+		<div id="page3" class="stuff__content"><h1><span class="red">Pyramid</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
+		<div id="page4" class="stuff__content"><h1><span class="red">Space</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
+		<div id="page5" class="stuff__content"><h1><span class="red">Energy</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
+		<div id="page6" class="stuff__content"><h1><span class="red">Security</span></h1><p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. A dicta dolorem<br>exercitationem explicabo</p></div>
 	</div>
 
 	<script src="./dist/app.js"></script>
