--- a/webgl/furniture/index.html
+++ b/webgl/furniture/index.html
@@ -36,6 +36,7 @@
 <body>
 	<p id="loading">Loading...</p>
 	<div id="container3D"></div>
+	<div id="dropbox"><div id="dropbox__border"></div></div>
 	<script src="./dist/app.js"></script>
 </body>
 </html>
