--- a/webgl/furniture/index.html
+++ b/webgl/furniture/index.html
@@ -12,6 +12,7 @@
 		body {
             font-family: sans-serif;
 			background-color: #555;
+			background-size: cover;
             overflow: hidden;
 		}
 		#loading {
@@ -31,6 +32,8 @@
             50% { opacity: 0.0; }
             100% { opacity: 1.0; }
         }
+
+
 	</style>
 </head>
 <body>
