--- a/webgl/vr/index.html
+++ b/webgl/vr/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	<title>Furniture</title>
 	<style>
         * {
@@ -32,8 +36,6 @@
             50% { opacity: 0.0; }
             100% { opacity: 1.0; }
         }
-
-
 	</style>
 </head>
 <body>
