--- a/webgl/sphere/index.html
+++ b/webgl/sphere/index.html
@@ -39,6 +39,7 @@
 	</style>
 </head>
 <body>
+	<p id="text"></p>
 	<p id="loading">Loading...</p>
 	<div id="container3D"></div>
 	<div id="dropbox"></div>
