--- a/webgl/sphere/index.html
+++ b/webgl/sphere/index.html
@@ -11,7 +11,7 @@
         }
 		body {
             font-family: sans-serif;
-			/*background-color: #555;*/
+			background-color: #c4beae;
 			background: linear-gradient(180deg, #fffdf1, #c4beae);
 			background-size: cover;
 			background-attachment: fixed;
