--- a/webgl/sphere/index.html
+++ b/webgl/sphere/index.html
@@ -11,9 +11,8 @@
         }
 		body {
             font-family: sans-serif;
-			background-color: #c4beae;
-			background: linear-gradient(180deg, #fffdf1, #c4beae);
-			background-size: cover;
+			background-color: #D7D1C5;
+			background-image: linear-gradient(-162deg, #FCFBF6 16%, #D7D1C5 99%);
 			background-attachment: fixed;
             overflow: hidden;
 		}
