--- a/webgl/sphere/index.html
+++ b/webgl/sphere/index.html
@@ -16,6 +16,7 @@
 			background-attachment: fixed;
             overflow: hidden;
 		}
+		#labels { display: none; }
 		#loading {
 			position: absolute;
 			top:50%;
@@ -39,10 +40,18 @@
 	</style>
 </head>
 <body>
-	<p id="text"></p>
 	<p id="loading">Loading...</p>
 	<div id="container3D"></div>
-	<div id="dropbox"></div>
+	<div id="labels">
+		<ul>
+			<li id="label0">Live</li>
+			<li id="label1">Timeline</li>
+			<li id="label2">Video</li>
+			<li id="label3">Music</li>
+			<li id="label4">Social Wall</li>
+			<li id="label5">Store</li>
+		</ul>
+	</div>
 	<script src="./dist/app.js"></script>
 </body>
 </html>
