--- a/webgl/sphere/index.html
+++ b/webgl/sphere/index.html
@@ -44,12 +44,12 @@
 	<div id="container3D"></div>
 	<div id="labels">
 		<ul>
-			<li id="label0">Live</li>
-			<li id="label1">Timeline</li>
-			<li id="label2">Video</li>
-			<li id="label3">Music</li>
-			<li id="label4">Social Wall</li>
-			<li id="label5">Store</li>
+			<li id="label0" class="cream_light">Live</li>
+			<li id="label1" class="cream_light">Timeline</li>
+			<li id="label2" class="cream_light">Video</li>
+			<li id="label3" class="cream_light">Music</li>
+			<li id="label4" class="cream_light">Social Wall</li>
+			<li id="label5" class="cream_light">Store</li>
 		</ul>
 	</div>
 	<script src="./dist/app.js"></script>
