--- a/webgl/sphere/index.html
+++ b/webgl/sphere/index.html
@@ -43,12 +43,12 @@
 	<div id="container3D"></div>
 	<div id="labels">
 		<ul>
-			<li id="label0" class="cream">Live</li>
-			<li id="label1" class="cream">Timeline</li>
-			<li id="label2" class="cream">Video</li>
-			<li id="label3" class="cream">Music</li>
-			<li id="label4" class="cream">Social Wall</li>
-			<li id="label5" class="cream">Store</li>
+			<li id="label0">Live</li>
+			<li id="label1">Timeline</li>
+			<li id="label2">Video</li>
+			<li id="label3">Music</li>
+			<li id="label4">Social Wall</li>
+			<li id="label5">Store</li>
 		</ul>
 	</div>
 	<script src="./dist/app.js"></script>
