--- a/webgl/tiles/index.html
+++ b/webgl/tiles/index.html
@@ -11,7 +11,7 @@
         }
 		body {
             font-family: sans-serif;
-			background-color: #000;
+			background-color: #fff;
 /*			background-image: linear-gradient(-162deg, #FCFBF6 16%, #D7D1C5 99%);
 			background-attachment: fixed;*/
             overflow: hidden;
@@ -24,7 +24,7 @@
 			font-size: 2rem;
 			font-weight: normal;
 			text-align: center;
-			color: #ffffff;
+			color: #555;
 			opacity: 1.0;
 			animation: fadeOut 3s linear infinite;
 			z-index: 1000;
