--- a/webgl/tiles/index.html
+++ b/webgl/tiles/index.html
@@ -16,7 +16,6 @@
 			background-attachment: fixed;*/
             overflow: hidden;
 		}
-		#labels { display: none; }
 		#loading {
 			position: absolute;
 			top:50%;
@@ -41,16 +40,7 @@
 <body>
 	<p id="loading">Loading...</p>
 	<div id="container3D"></div>
-	<!--div id="labels">
-		<ul>
-			<li id="label0">Live</li>
-			<li id="label1">Timeline</li>
-			<li id="label2">Video</li>
-			<li id="label3">Music</li>
-			<li id="label4">Social Wall</li>
-			<li id="label5">Store</li>
-		</ul>
-	</div-->
+	<div id="label">Start!</div>
 	<script src="./dist/app.js"></script>
 </body>
 </html>
