--- a/webgl/tiles/index.html
+++ b/webgl/tiles/index.html
@@ -11,7 +11,7 @@
         }
 		body {
             font-family: sans-serif;
-			background-color: #fff;
+			background-color: #b9e2ff;
 /*			background-image: linear-gradient(-162deg, #FCFBF6 16%, #D7D1C5 99%);
 			background-attachment: fixed;*/
             overflow: hidden;
@@ -40,7 +40,7 @@
 <body>
 	<p id="loading">Loading...</p>
 	<div id="container3D"></div>
-	<div id="label">Start!</div>
+	<!--div id="label">Start!</div-->
 	<script src="./dist/app.js"></script>
 </body>
 </html>
