--- a/webgl/clone/index.html
+++ b/webgl/clone/index.html
@@ -65,7 +65,7 @@ media="screen">
     position: absolute;
     height: 100%;
     width: 100%;
-    background: url("./images/360_.png") center bottom no-repeat;
+    background: url("./images/360.png") top right no-repeat;
     display: none;
     opacity: 0;
     z-index: 500;
