--- a/webgl/plugin/index.html
+++ b/webgl/plugin/index.html
@@ -60,6 +60,8 @@
 			50% { opacity: 0.0; }
 			100% { opacity: 1.0; }
 		}
+
+
 	</style>
 </head>
 <body>
@@ -78,9 +80,9 @@
 	<script src="./dist/plugin.js"></script>
 
 	<script>
-        new IHViewer('container0', { appId: './', sku: '06577' });
+//        new IHViewer('container0', { appId: './', sku: '06577' });
         new IHViewer('container1', { appId: './', sku: '03257' });
-        new IHViewer('container2', { appId: './', sku: '76321' });
+//        new IHViewer('container2', { appId: './', sku: '76321' });
 	</script>
 </body>
 </html>
