--- a/webgl/plugin/index.html
+++ b/webgl/plugin/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Plugin</title>
 	<style>
         * {
@@ -81,7 +82,8 @@
 
 	<script>
 //        new IHViewer('container0', { appId: './', sku: '06577' });
-        new IHViewer('container1', { appId: './', sku: '03257' });
+//        new IHViewer('container1', { appId: './', sku: '03257ie' });
+		new IHViewer('container1', { appId: './', sku: '03257' });
 //        new IHViewer('container2', { appId: './', sku: '76321' });
 	</script>
 </body>
