--- a/webgl/furniture/index.html
+++ b/webgl/furniture/index.html
@@ -11,7 +11,7 @@
         }
 		body {
             font-family: sans-serif;
-			background-color: #555;
+			background-color: #fff;
 			background-size: cover;
             overflow: hidden;
 		}
