--- a/webgl/orbit/index.html
+++ b/webgl/orbit/index.html
@@ -185,6 +185,7 @@
 		</script>
 	</head>
 	<body ontouchstart="">
+		<div id="log" style="top: 0; left: 0; width: 200px; height: 100%; position: absolute; font-size: 2rem;"></div>
 		<div id="3dCanvas"></div>
 		<div id="text3dLayer" class="text-canvas">
 			<!--Appends Text Dynamically-->
