--- a/webgl/orbit/index.html
+++ b/webgl/orbit/index.html
@@ -13,6 +13,8 @@
 		<script type="text/javascript" src="js/controls/AppLoader.js"></script>
 		<script type="text/javascript" src="js/controls/BuildingTexts.js"></script>
 		<script type="text/javascript" src="js/library/Detector.js"></script>
+    <script src="js/library/touch-emulator.js"></script>
+    <script> TouchEmulator(); </script>
 		<script id="vs" type="x-shader/x-vertex">
 
 			varying vec2 vUv;
