--- a/webgl/orbit/index.html
+++ b/webgl/orbit/index.html
@@ -88,7 +88,7 @@
 					right: 3,
 					bottom: 3
                 };
-                window.ORBIT.addEventListener( 'change', orbitChange );
+                //window.ORBIT.addEventListener( 'change', orbitChange );
 
                 var lastTarget = {};
                 // ----------------------------------------------------------
