--- a/webgl/sphere/index.html
+++ b/webgl/sphere/index.html
@@ -47,8 +47,9 @@
 			<li id="label1">Timeline</li>
 			<li id="label2">Video</li>
 			<li id="label3">Music</li>
-			<li id="label4">Social Wall</li>
-			<li id="label5">Store</li>
+			<li id="label4">Cinema</li>
+			<li id="label5">Social Wall</li>
+			<li id="label6">Store</li>
 		</ul>
 	</div>
 	<script src="./dist/app.js"></script>
