--- a/webgl/scene/index.html
+++ b/webgl/scene/index.html
@@ -14,20 +14,29 @@
             font-family: sans-serif;
 			background-color: #ccc;
 			background-size: cover;
-            overflow: hidden;
+            /*overflow: hidden;*/
+			height: 5000px;
+			width: 5000px;
 		}
 		#container0 {
-			position: absolute;
-			left: 2.5%;
+			top: 500px;
+			left: 500px;
+/*			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+			/*position: relative;
+
+/*			left: 2.5%;
 			top: 2.5%;
 			height: 95%;
-			width: 95%;
+			width: 95%;*/
 			/*margin: 2rem 0 0 2rem;*/
-			background-color: #fff;
+			background-color: #ffffff;
+			visibility: hidden;
 		}
 		#container1 {
 			position: absolute;
-			left: 33%;
+			: 33%;
 			top: 20%;
 			height: 50%;
 			width: 30%;
@@ -44,8 +53,9 @@
 			background-color: #fff;
 		}
 		.ihv_loading {
-			position: absolute;
+			position: relative;
 			top: 50%;
+			transform: translateY(-50%);
 			width: 100%;
 			font-size: 2rem;
 			font-weight: normal;
@@ -66,8 +76,12 @@
 	</style>
 </head>
 <body>
-<div id="container0">
-	<p class="ihv_loading">Loading...</p>
+<div style="position: absolute; left: 50%; top:50%; height: 70px; width: 70px; background-color: #1ed36f; z-index: 2;"></div>
+<div style="position: absolute; left: 60%; top:60%; height: 70px; width: 70px; background-color: #5693d3; z-index: 2;"></div>
+<div style="background-color: #ccf; position: absolute; height: 1000px; width: 1000px; /*overflow: hidden;*/ z-index: 1;">
+	<div id="container0" style="height: 700px; width: 700px;">
+		<p class="ihv_loading">Loading...</p>
+	</div>
 </div>
 
 <!--div id="container1">
@@ -81,8 +95,21 @@
 <script src="./dist/plugin.js"></script>
 
 <script>
-    //new IHViewer('container0', { path: '.', sku: '23456', appId: 'data.json' });
-    //http://api.inhaabit.com/v2/web-product/kitchen-wizz-r-15-pro/59cdd0185f730813f9f224c9
+
+    //new IHViewer('container0', { path: '.', sku: '01234', appId: 'data.json', noFullscreen: false, hideUntilLoaded: true });
+    //http://api.inhaabit.com/v2/web-product/HR6BF157B/5aaa44fa6e48f91716ee56b1
+    //new IHViewer('container0', { sku: 'HR6BF157B', appId: '5aaa44fa6e48f91716ee56b1', noFullscreen: false, hideUntilLoaded: true});
+//    new IHViewer('container0', {hideUntilLoaded: false, appId: '5c12d762a4b58479b4de179f', sku: 'kitchen-wizz-r-15-pro', noFullscreen: false, hideUntilLoaded: false});
+    new IHViewer('container0', {hideUntilLoaded: false, appId: '5c12d762a4b58479b4de179f', sku: 'the-smart-grinder-tm-pro', noFullscreen: false, hideUntilLoaded: false});
+    
+//    new IHViewer('container0', {hideUntilLoaded: false, appId: '5c7df45a9473f871499a73c4', sku: 'island-2-4-burner-deluxe-with-bench-sink-and-shelves', noFullscreen: false, hideUntilLoaded: false});
+
+//	new IHViewer('container0', {hideUntilLoaded: false, appId: '5c12d762a4b58479b4de179f', sku: 'the-smart-kettle-luxe', noFullscreen: false, hideUntilLoaded: false});
+//    new IHViewer('container0', {hideUntilLoaded: false, appId: '5c12d762a4b58479b4de179f', sku: 'the-smart-oven-r-pro', noFullscreen: false, hideUntilLoaded: false});
+
+    //new IHViewer('container0', { path: 'http://api.inhaabit.com/v2/web-product', sku: '230l-top-mount', appId: '5aaa44fa6e48f91716ee56b1', noFullscreen: false, hideUntilLoaded: false} );
+    //new IHViewer('container0', { sku: '453l-4-5-star-bottom-mount', appId: '5aaa44fa6e48f91716ee56b1' });
+    //http://api.inhaabit.com/v2/web-product/the-smart-oven-r-pro/5c12d762a4b58479b4de179f
 /*
 api.inhaabit.com/v2/web-product/7-piece-dining/5b85f50f933bce2234d98b21
 api.inhaabit.com/v2/web-product/4-burner-with-sink-bench-and-shelves/5b85f50f933bce2234d98b21
@@ -96,16 +123,23 @@ http://api.inhaabit.com/v2/web-product/the-precision-brewer-tm-thermal/59cdd0185
 http://api.inhaabit.com/v2/web-product/the-fresh-and-furious-tm/59cdd0185f730813f9f224c9 // test glass colors
 */
 
-new IHViewer('container0', { path: 'http://api.inhaabit.com/v2/web-product',
-	sku: 'the-dynamic-duo-tm',
-	appId: '59cdd0185f730813f9f224c9' });
+// http://api.inhaabit.com/v2/web-product/453l-4-5-star-bottom-mount/5aaa44fa6e48f91716ee56b1
 
+//new IHViewer('container0', { sku: '453l-4-5-star-bottom-mount', appId: '5aaa44fa6e48f91716ee56b1' });
 
-	//    new IHViewer('container0', { path: 'http://api.inhaabit.com/v2/web-product', sku: 'kitchen-wizz-r-15-pro', appId: '59cdd0185f730813f9f224c9' });
+//new IHViewer('container0', { path: 'http://api.inhaabit.com/v2/web-product', sku: '9-piece-dining', appId: '5b85f50f933bce2234d98b21' });
+// 6-piece-modular-lounge - 5b85f50f933bce2234d98b21
+//new IHViewer('container0', { path: 'http://api.inhaabit.com/v2/web-product', sku: '6-piece-modular-lounge', appId: '5c7df45a9473f871499a73c4' });
+//new IHViewer('container0', { sku: 'the-tea-maker-compact-tm', appId: '5a60753a81ab6c7d3b68d46e' });
+//new IHViewer('container0', { path: 'http://api.inhaabit.com/v2/web-product', sku: '6-burner-with-side-burner-with-bench-and-sink', appId: '5b85f50f933bce2234d98b21' });
+
+//http://api.inhaabit.com/v2/web-product/230l-top-mount/5aaa44fa6e48f91716ee56b1
+//new IHViewer('container0', { path: 'http://api.inhaabit.com/v2/web-product', sku: '230l-top-mount', appId: '5aaa44fa6e48f91716ee56b1' });
 
     /*		new IHViewer('container0', { appId: '5a60753a81ab6c7d3b68d46e', sku: 'charman-road-stairs' });
             new IHViewer('container1', { appId: '5b85f50f933bce2234d98b21', sku: 'big-d-and-c-on-cart-series-ii' });
             new IHViewer('container2', { appId: '5a60753a81ab6c7d3b68d46e', sku: 'tailor-avalon-sofa' });*/
+
 </script>
 </body>
 </html>
