--- a/aria-app/index.html
+++ b/aria-app/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>ARIA</title>
-  <base href="/">
-
+  <base href="/aria-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.c88293cfea0c75ad23fd.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.2f29e12616932f0ed037.js"></script><script type="text/javascript" src="es2015-polyfills.0c061f969d4585207bc6.js" nomodule></script><script type="text/javascript" src="polyfills.662dc2e433e4f8493fad.js"></script><script type="text/javascript" src="main.3affa1ac45735a64cd53.js"></script></body>
+<script type="text/javascript" src="runtime.2f29e12616932f0ed037.js"></script><script type="text/javascript" src="es2015-polyfills.0c061f969d4585207bc6.js" nomodule></script><script type="text/javascript" src="polyfills.662dc2e433e4f8493fad.js"></script><script type="text/javascript" src="main.a1b15f0c85097a8fc6e5.js"></script></body>
 </html>
