--- a/aria-app/index.html
+++ b/aria-app/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ARIA</title>
-  <base href="/aria-app/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/aria-app/">  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.c88293cfea0c75ad23fd.css"></head>
 <body>
