--- a/PageSlider/index.html
+++ b/PageSlider/index.html
@@ -7,13 +7,11 @@
 </head>
 <body>
 
-    <div class="slide" id="p1"><p>Page 1</p></div>
-    <div class="slide" id="p2"><p>Page 2</p></div>
-    <div class="slide" id="p3"><p>Page 3</p></div>
-    <div class="slide" id="p4"><p>Page 4</p></div>
+    <div class="slide" style="top: 0;"><p>Page - 1</p></div>
+    <div class="slide"><p>Page - 2</p></div>
 
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
-    <script  src="js/app.js"></script>
+    <!--script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
+    <script  src="js/app.js"></script-->
 
 </body>
 </html>
