--- a/PageSlider/index.html
+++ b/PageSlider/index.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <div class="slide" style="top: 0;"><p>Page - 1</p></div>
-    <div class="slide"><p>Page - 2</p></div>
-
+ <div class="slide" style="top: 0;">
+    <div class="slide" style="top: 0;"><p>Page 1</p></div>
+    <div class="slide"><p>Page 2</p></div>
+ </div>
     <!--script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
     <script  src="js/app.js"></script-->
 
