--- a/PageSlider/index.html
+++ b/PageSlider/index.html
@@ -6,12 +6,15 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
- <div class="slide" style="top: 0; overflow: hidden;">
-    <div class="slide" style="top: 0;"><p>Page A</p></div>
-    <div class="slide"><p>Page B</p></div>
- </div>
-    <!--script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
-    <script  src="js/app.js"></script-->
+
+<div class="wrapper">
+    <div class="slide" id="p1"><p>Page #1</p></div>
+    <div class="slide" id="p2"><p>Page #2</p></div>
+    <div class="slide" id="p3"><p>Page #3</p></div>
+    <div class="slide" id="p4"><p>Page #4</p></div>
+</div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
+    <script  src="js/app.js"></script>
 
 </body>
 </html>
