--- a/aria-app/index.html
+++ b/aria-app/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <title>ARIA</title>
   <base href="/aria-app/">  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.c88293cfea0c75ad23fd.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.2f29e12616932f0ed037.js"></script><script type="text/javascript" src="es2015-polyfills.0c061f969d4585207bc6.js" nomodule></script><script type="text/javascript" src="polyfills.662dc2e433e4f8493fad.js"></script><script type="text/javascript" src="main.d009a6ec4b023d199f29.js"></script></body>
+<script type="text/javascript" src="runtime.2f29e12616932f0ed037.js"></script><script type="text/javascript" src="es2015-polyfills.0c061f969d4585207bc6.js" nomodule></script><script type="text/javascript" src="polyfills.662dc2e433e4f8493fad.js"></script><script type="text/javascript" src="main.d23e6ebb3c427f541440.js"></script></body>
 </html>
