--- a/cfg2d/index.html
+++ b/cfg2d/index.html
@@ -4,14 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Draggable</title>
+  <style>
+    #log {
+      bottom: 0;
+      height: 300px;
+      width: 500px;
+      color: #000;
+      position: absolute;
+      background-color: #919dcd;
+    }
+  </style>
 </head>
 
 <body>
 <div id="scene"></div>
 <div class="aside" id="aside"><div class="sideBar" id="sideBar"></div></div>
+<div id="log"></div>
 <!--div id="plus" class="button" style="right: 50px; top: 150px;">+</div-->
-<!--script src="./lib/touch-emulator.js"></script>
-<script> TouchEmulator(); </script-->
+<script src="./lib/touch-emulator.js"></script>
+<script> TouchEmulator(); </script>
 
 <script src="./dist/app.js"></script>
 
