--- a/cfg2d/index.html
+++ b/cfg2d/index.html
@@ -12,6 +12,8 @@
       color: #000;
       position: absolute;
       background-color: #919dcd;
+      overflow-y: auto;
+      visibility: hidden;
     }
   </style>
 </head>
@@ -21,8 +23,8 @@
 <div class="aside" id="aside"><div class="sideBar" id="sideBar"></div></div>
 <div id="log"></div>
 <!--div id="plus" class="button" style="right: 50px; top: 150px;">+</div-->
-<script src="./lib/touch-emulator.js"></script>
-<script> TouchEmulator(); </script>
+<!--script src="./lib/touch-emulator.js"></script>
+<script> TouchEmulator(); </script-->
 
 <script src="./dist/app.js"></script>
 
