--- a/aria-app/index.html
+++ b/aria-app/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ARIA</title>
-  <base href="/aria-app/">  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>Build ARIA</title>
+  <base href="/aria-app/">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.4ecf779a9018768a64d1.css"></head>
+<link rel="stylesheet" href="styles.f165a6cc89627aa4df1c.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.2f29e12616932f0ed037.js"></script><script type="text/javascript" src="es2015-polyfills.0c061f969d4585207bc6.js" nomodule></script><script type="text/javascript" src="polyfills.0333effec7e287cc8469.js"></script><script type="text/javascript" src="main.ebeb33aecb31c5112cc5.js"></script></body>
+<script type="text/javascript" src="runtime.2f29e12616932f0ed037.js"></script><script type="text/javascript" src="es2015-polyfills.0c061f969d4585207bc6.js" nomodule></script><script type="text/javascript" src="polyfills.0333effec7e287cc8469.js"></script><script type="text/javascript" src="main.c652a44a22d8791f7f91.js"></script></body>
 </html>
