--- a/hmtlTest/index.html
+++ b/hmtlTest/index.html
@@ -26,14 +26,17 @@
       margin-bottom: 10px;
       color: #fff;
       background-color: #555;
+      vertical-align: middle;
       font-size: 30px;
       line-height: 1;
       width: 100px;
     }
     .wo {
+      display: inline-block;
       margin-bottom: 10px;
       color: #fff;
       background-color: #555;
+      vertical-align: middle;
       font-size: 30px;
     }
     .caption {
