--- a/hmtlTest/index.html
+++ b/hmtlTest/index.html
@@ -8,6 +8,21 @@
       padding: 0;
       margin: 0;
     }
+    @font-face {
+      font-family: "Helvetica Neue";
+      src: url(./HelveticaNeueLTStd-Lt.otf);/*HelveticaNeueLight.ttf);*/
+      font-style: normal;
+      font-weight: normal;
+    }
+    @font-face {
+      font-family: "Helvetica Neue";
+      src: url(./HelveticaNeueLTStd-Blk.otf);/*HelveticaNeue-Medium.ttf);*/
+      font-style: normal;
+      font-weight: bold;
+    }
+    html {
+      font-family: "Helvetica Neue";
+    }
     .button {
       display: flex;
       align-items: center;
@@ -18,6 +33,7 @@
       height: 40px;
       width: 100px;
       font-size: 30px;
+      line-height: 10px;
    }
     .string {
       display: flex;
@@ -32,12 +48,26 @@
       width: 100px;
     }
     .wo {
-      display: inline-block;
       margin-bottom: 10px;
       color: #fff;
       background-color: #555;
-      vertical-align: middle;
       font-size: 30px;
+      line-height: 1;
+    }
+    .table {
+      display: table-cell;
+      vertical-align: middle
+      margin-bottom: 10px;
+      color: #fff;
+      background-color: #555;
+      height: 40px;
+      width: 100px;
+      font-size: 30px;
+    }
+    .wrapper {
+      display: absolute;
+      left: 100px;
+      text-align: center;
     }
     .caption {
       display: block;
@@ -52,6 +82,13 @@
   <div class="button">TEXT</div>
   <div class="button">12345</div>
   <div class="button">text</div>
+  <div class="button">eeee</div>
+  <p class="wrapper">
+    <div class="table">TEXT</div>
+    <div class="table">12345</div>
+    <div class="table">text</div>
+    <div class="table">eeee</div>
+  </p>
   <div class="string">12345</div>
   <div class="string">TEXT</div>
   <div class="string">text</div>
