--- a/hmtlTest/index.html
+++ b/hmtlTest/index.html
@@ -53,6 +53,7 @@
       background-color: #555;
       font-size: 30px;
       line-height: 1;
+      overflow: hidden;
     }
     .table {
       display: table-cell;
