--- a/hmtlTest/index.html
+++ b/hmtlTest/index.html
@@ -53,7 +53,14 @@
       background-color: #555;
       font-size: 30px;
       line-height: 1;
+      vertical-align: middle;
       overflow: hidden;
+    }
+    .wo1 {
+      font-size: 10px;
+    }
+    .wo2 {
+      font-size: 40px;
     }
     .table {
       display: table-cell;
@@ -84,20 +91,24 @@
   <div class="button">12345</div>
   <div class="button">text</div>
   <div class="button">eeee</div>
-  <p class="wrapper">
-    <div class="table">TEXT</div>
-    <div class="table">12345</div>
-    <div class="table">text</div>
-    <div class="table">eeee</div>
-  </p>
+  <div class="table">TEXT</div>
+  <div class="table">12345</div>
+  <div class="table">text</div>
+  <div class="table">eeee</div>
+  
   <div class="string">12345</div>
   <div class="string">TEXT</div>
   <div class="string">text</div>
   <div class="string">eeee</div>
-  <div class="wo">12345</div>
-  <div class="wo">TEXT</div>
-  <div class="wo">text</div>
-  <div class="wo">eeee</div>
+  
+  <p class="wrapper">
+    <span class="wo wo2">ooooo</span> 
+    <span class="wo">12345</span> 
+    <span class="wo wo1">TEXT</span> 
+    <span class="wo">text</span> 
+    <span class="wo wo2">eeee</span>
+  </p>
+  
 	<!--script src="js/app.js"></script-->
 </body>
 </html>
