--- a/hmtlTest/index.html
+++ b/hmtlTest/index.html
@@ -52,9 +52,8 @@
       color: #fff;
       background-color: #555;
       font-size: 30px;
-      line-height: 1;
+      line-height: 30px;
       vertical-align: middle;
-      overflow: hidden;
     }
     .wo1 {
       font-size: 10px;
