--- a/fontTest/index.html
+++ b/fontTest/index.html
@@ -96,8 +96,8 @@
   <div class="string">text</div>
   <div class="string">eeee</div-->
   
-  <div class="wo helvetica">Arial Text 1234</div> 
-  <div class="wo arial">Helvetica Text 1234</div> 
+  <div class="wo arial">Arial Text 1234</div> 
+  <div class="wo helvetica">Helvetica Text 1234</div> 
   <div class="wo">Default Text 1234</div>
   
 	<!--script src="js/app.js"></script-->
