--- a/aria-app/index.html
+++ b/aria-app/index.html
@@ -6,9 +6,10 @@
   <base href="/aria-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.a9c28fe559023eb10abb.css"></head>
+<link rel="stylesheet" href="styles.9de4303370fdeb708c37.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.2f29e12616932f0ed037.js"></script><script type="text/javascript" src="es2015-polyfills.e52ccd6bc00e4183b443.js" nomodule></script><script type="text/javascript" src="polyfills.b055fbd7fa63b25fd3be.js"></script><script type="text/javascript" src="main.14a73816dfbed3028c6f.js"></script></body>
+<script type="text/javascript" src="runtime.2f29e12616932f0ed037.js"></script><script type="text/javascript" src="es2015-polyfills.e52ccd6bc00e4183b443.js" nomodule></script><script type="text/javascript" src="polyfills.6068b9cd46965d7198cb.js"></script><script type="text/javascript" src="main.24852f1a26920dfb0147.js"></script></body>
 </html>
