--- a/webgl/camera/index.html
+++ b/webgl/camera/index.html
@@ -77,7 +77,7 @@
                 window.ORBIT.maxDistance = 11;
                 window.ORBIT.minPolarAngle = Math.PI * 0.2;
                 window.ORBIT.maxPolarAngle = Math.PI * 0.7;
-                window.ORBIT.enablePan = false;
+                //window.ORBIT.enablePan = false;
 
                 var minDistance = window.ORBIT.minDistance;
                 var maxDistance = window.ORBIT.maxDistance;
