--- a/webgl/config/index.html
+++ b/webgl/config/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Configurator</title>
 	<style>
@@ -37,11 +38,13 @@
 			display: flex;
 			flex-direction: column;
 			height: 100%;
+			background: linear-gradient(0deg, rgba(250,250,250,1) 40%, rgba(204,204,204,1) 100%);
 			overflow: hidden;
 		}
 		#container {
 			position: relative;
 			flex-grow: 1;
+
 			/*background: center / contain no-repeat url("./assets/img/background.jpg");*/
 		}
 		#btnPanel {
@@ -73,25 +76,25 @@
 			position: absolute;
 		}
 		.label-header {
-			height: 30px;
-			width: 160px;
+			height: 15px;
+			width: 80px;
 			background-color: #fff;
 			color: #c11c22;
-			font-size: 1.3rem;
+			font-size: 0.6rem;
 			text-align: center;
-			line-height: 30px;
+			line-height: 15px;
 			border: 1px solid #c11c22;
-			border-radius: 20px 20px 0 0;
+			border-radius: 10px 10px 0 0;
 		}
 		#label-price {
-			height: 50px;
-			width: 160px;
+			height: 25px;
+			width: 80px;
 			background-color: #c11c22;
 			color: #fff;
-			font-size: 1.9rem;
+			font-size: 1rem;
 			text-align: center;
-			line-height: 50px;
-			border-radius: 0 0 20px 20px;
+			line-height: 25px;
+			border-radius: 0 0 10px 10px;
 			border: 1px solid #c11c22;
 		}
 	</style>
