--- a/webgl/config/index.html
+++ b/webgl/config/index.html
@@ -8,202 +8,7 @@
 
 	<title>Configurator</title>
 	<style>
-		* {
-			margin: 0;
-			padding: 0;
-			background-repeat: no-repeat;
-		}
-/*		@font-face {
-			font-family: "Helvetica Neue";
-			src: url(assets/fonts/HelveticaNeueLTStd-Lt.otf);
-			font-style: normal;
-			font-weight: normal;
-		}
-		@font-face {
-			font-family: "Helvetica Neue";
-			src: url(assets/fonts/HelveticaNeueLTStd-Blk.otf);
-			font-style: normal;
-			font-weight: bold;
-		}
-		@font-face {
-			font-family: "Icons";
-			src: url(assets/fonts/iconfont.ttf);
-			font-style: normal;
-			font-weight: normal;
-		}*/
-		@font-face {
-			font-family: "Icons";
-			src: url(./assets/fonts/icons.ttf);
-			font-style: normal;
-			font-weight: normal;
-		}
-		html, body { height: 100%; }
-		body {
-			font-family: 'Open Sans', sans-serif;
-			user-select: none;
-		}
-		.page {
-			display: flex;
-			flex-direction: column;
-			height: 100%;
-			background: linear-gradient(0deg, rgba(250,250,250,1) 40%, rgba(204,204,204,1) 100%);
-			overflow: hidden;
-		}
-		.plymth {
-			top: 25px;
-			left: 15px;
-			color: #fff;
-			font-size: 2.3rem;
-			font-family: "Icons";
-			position: absolute;
-		}
-		.watercraft {
-			bottom: 10px;
-			left: 15px;
-			color: #000;
-			font-size: 4.5rem;
-			font-family: "Icons";
-			position: absolute;
-		}
-		.rounded-button {
-			height: 62px;
-			width: 195px;
-			line-height: 62px;
-			border-radius: 62px;
-			box-sizing: border-box;
-			cursor: pointer;
-			outline: none;
-		}
-		.cart {
-			top: 25px;
-			right: 22px;
-			margin-left: 10px;
-			color: #000;
-			font-size: 2rem;
-			background-color: #fff;
-			border: solid 1px #4EA96F;
-			position: absolute;
-		}
-		.ar {
-			top: 105px;
-			right: 22px;
-			padding-left: 25px;
-			color: #fff;
-			background: radial-gradient(circle at 80%, rgba(50,228,115,1) 0%, rgba(78,169,111,1) 100%);
-			position: absolute;
-		}
-		#cart-price {
-			color: #000;
-			font-size: 1.5rem;
-			margin-left: 25px;
-			vertical-align: 5px;
-		}
-		.cart-icon {
-			color: #4EA96F;
-			font-size: 3.2rem;
-			font-family: "Icons";
-			margin-right: 25px;
-			float: right;
-		}
-		.ar-icon {
-			color: #fff;
-			font-size: 2.8rem;
-			font-family: "Icons";
-			margin-right: 25px;
-			float: right;
-		}
-		.panel {
-			max-height: 25vh;
-			/*background-color: #a2a52b;*/
-			padding: 5px 5px 5px 50px;
-			box-sizing: border-box;
-			display: block;
-			overflow: auto;
-		}
-		.menu {
-			padding: 5px 5px 5px 50px;
-			background-color: #4EA96F;
-			color: #fff;
-			font-weight: bold;
-			font-size: 1.2rem;
-			box-sizing: border-box;
-			display: block;
-		}
-		.option {
-			padding: 12px 30px;
-			margin: 0 5px;
-			display: inline-block;
-			cursor: pointer;
-		}
-		.option:hover {
-			color: #bfbfbf;
-		}
-		#tab {
-			height: 10px;
-			background-color: #4EA96F;
-			display: block;
-			position: absolute;
-		}
-		#container {
-			position: relative;
-			flex-grow: 1;
-
-			/*background: center / contain no-repeat url("./assets/img/background.jpg");*/
-		}
-		#container-menu {
-			background-color: #fff;
-			/*max-height: 30%;*/
-			/*overflow: hidden;*/
-		}
-		.btn {
-			font-size: .97rem;
-			padding-left: 40px;
-			margin: 25px 15px 10px 15px;
-			height: 100px;
-			width: 260px;
-			border: solid 1px #4EA96F;
-			border-radius: 100px;
-			background-size: 30%;
-			background-position: bottom 50% right 15px;
-			background-color: #fff;
-			box-sizing: border-box;
-			line-height: 100px;
-			cursor: pointer;
-			outline: none;
-			display: inline-block;
-		}
-		.btn:hover {
-			border-color: #5cd691;
-			background-color: #f4f4f4;
-		}
-		.label {
-			right: 20px;
-			top: 20px;
-			font-weight: bold;
-			position: absolute;
-		}
-		.label-header {
-			height: 15px;
-			width: 80px;
-			background-color: #fff;
-			color: #c11c22;
-			font-size: 0.6rem;
-			text-align: center;
-			line-height: 15px;
-			border: 1px solid #c11c22;
-			border-radius: 10px 10px 0 0;
-		}
-		#label-price {
-			height: 25px;
-			width: 80px;
-			background-color: #c11c22;
-			color: #fff;
-			font-size: 1rem;
-			text-align: center;
-			line-height: 25px;
-			border-radius: 0 0 10px 10px;
-			border: 1px solid #c11c22;
-		}
+		.plymth, .watercraft, .rounded-button { color: #fff; }
 	</style>
 </head>
 <body>
@@ -217,8 +22,6 @@
 	</div>
 	<div id="container-menu"></div>
 </div>
-
-
 
 <!--script src="./lib/touch-emulator.js"></script>
 <script> //TouchEmulator(); </script-->
