--- a/webgl/globe3d/index.html
+++ b/webgl/globe3d/index.html
@@ -22,7 +22,9 @@ window.addEventListener( "load", function() {
 		light: 'lights',
 		lightIntensity : 0.5,
 		lightAmbience : 0.1,
-		sunLocation : { lat: 30, lng: 30 },
+        mapLandColor: '#009a00',
+        autoRotate: true,
+        autoRotateSpeed: 2
 	} );
 
 } );
