--- a/webgl/globe3d/index.html
+++ b/webgl/globe3d/index.html
@@ -22,7 +22,8 @@ window.addEventListener( "load", function() {
 		light: 'lights',
 		lightIntensity : 0.5,
 		lightAmbience : 0.1,
-        mapLandColor: '#009a00',
+        mapLandColor: '#86b234',
+        mapSeaColor: '#1167a4',
         autoRotate: true,
         autoRotateSpeed: 2
 	} );
