--- a/webgl/globe3d/index.html
+++ b/webgl/globe3d/index.html
@@ -22,8 +22,8 @@ window.addEventListener( "load", function() {
 		light: 'lights',
 		lightIntensity : 0.5,
 		lightAmbience : 0.1,
-        mapLandColor: '#86b234',
-        mapSeaColor: '#1167a4',
+        mapLandColor: '#84b035',
+        mapSeaColor: '#1b75b3',
         autoRotate: true,
         autoRotateSpeed: 2
 	} );
