--- a/webgl/globe3d/index.html
+++ b/webgl/globe3d/index.html
@@ -20,11 +20,11 @@ window.addEventListener( "load", function() {
 	
 	var myearth3 = new Earth( "myearth3", {
 		light: 'lights',
-		lightIntensity : 0.5,
+		lightIntensity : 0.7,
 		lightAmbience : 0.1,
         mapLandColor: '#97c53a',
-        mapSeaColor: '#1f79b7',
-        autoRotate: true,
+        mapSeaColor: '#1167a4',
+        //autoRotate: true,
         autoRotateSpeed: 2
 	} );
 
