--- a/webgl/globe3d/index.html
+++ b/webgl/globe3d/index.html
@@ -24,7 +24,7 @@ window.addEventListener( "load", function() {
 		lightAmbience : 0.1,
         mapLandColor: '#97c53a',
         mapSeaColor: '#1167a4',
-        //autoRotate: true,
+        autoRotate: true,
         autoRotateSpeed: 2
 	} );
 
